--- a/src/components/About.css
+++ b/src/components/About.css
@@ -19,7 +19,8 @@
 .about-image {
     width: fit-content;
     height: 381px;
-    box-shadow: 10px 10px black 5px;
+    box-shadow: 10px 10px hsla(0, 0%, 0%, 0.25) 5px;
+    border-radius: 20px;
 }
 
 .text-container {
