--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .header-bg{
-    background-image: url(../assets/large-triangles.svg);
+    background-image: url(../assets/circle-scatter-haikei.svg);
     margin: 0%;
     padding: 2rem;
 }
